# openapi.yaml
@@ -28,12 +28,12 @@ paths:
           schema:
             type: boolean
       responses:
-        '200':
+        "200":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/NonceResponse'
+                $ref: "#/components/schemas/NonceResponse"
   /auth/login:
     post:
       tags:
@@ -52,16 +52,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/LoginRequest'
+              $ref: "#/components/schemas/LoginRequest"
       responses:
-        '201':
+        "201":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/LoginResponse'
-        '400':
-          description: 'Invalid request'
+                $ref: "#/components/schemas/LoginResponse"
+        "400":
+          description: "Invalid request"
 
   /nfts:
     get:
@@ -165,6 +165,97 @@ paths:
       responses:
         "201":
           description: successful operation
+
+  /identity-subscriptions/outgoing/{target_type}:
+    get:
+      tags:
+        - Subscriptions
+      summary: Get outgoing subscriptions for authenticated user.
+      operationId: getOutgoingSubscriptions
+      parameters:
+        - name: target_type
+          in: path
+          required: true
+          schema:
+            type: string
+            enum:
+              - IDENTITY
+              - WAVE
+              - DROP
+        - name: page_size
+          in: query
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 10
+            minimum: 1
+            maximum: 100
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 1
+            minimum: 1
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/OutgoingIdentitySubscriptionsPage"
+
+  /identity-subscriptions/incoming/{target_type}/{target_id}:
+    get:
+      tags:
+        - Subscriptions
+      summary: Get identities subscribed to target.
+      operationId: getIncomingSubscriptionsForTarget
+      parameters:
+        - name: target_type
+          in: path
+          required: true
+          schema:
+            type: string
+            enum:
+              - IDENTITY
+              - WAVE
+              - DROP
+        - name: target_id
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: page_size
+          in: query
+          required: false
+          schema:
+            type: number
+            format: int64
+            minimum: 1
+            default: 10
+            maximum: 100
+        - name: page
+          in: query
+          required: false
+          schema:
+            type: number
+            format: int64
+            default: 1
+            minimum: 1
+      responses:
+        "200":
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/IncomingIdentitySubscriptionsPage"
 
   /identities/{id}/subscriptions:
     get:
@@ -336,7 +427,7 @@ paths:
           description: "Invalid request"
     get:
       tags:
-          - ProfileREP
+        - ProfileREP
       summary: Get profile REP rating
       operationId: getProfileRepRating
       parameters:
@@ -554,7 +645,6 @@ paths:
                 $ref: "#/components/schemas/RatingWithProfileInfoAndLevelPage"
         "404":
           description: Profile not found
-
   /public/drops:
     get:
       tags:
@@ -1013,14 +1103,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateMediaUploadUrlRequest'
+              $ref: "#/components/schemas/CreateMediaUploadUrlRequest"
       responses:
         "201":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CreateMediaUrlResponse'
+                $ref: "#/components/schemas/CreateMediaUrlResponse"
         "400":
           description: "Invalid request"
   /proxies:
@@ -1186,14 +1276,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateMediaUploadUrlRequest'
+              $ref: "#/components/schemas/CreateMediaUploadUrlRequest"
       responses:
         "201":
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CreateMediaUrlResponse'
+                $ref: "#/components/schemas/CreateMediaUrlResponse"
         "400":
           description: "Invalid request"
 
@@ -1776,7 +1866,6 @@ components:
           items:
             $ref: "#/components/schemas/RatingWithProfileInfoAndLevel"
 
-
     DropsPage:
       type: object
       required:
@@ -2020,10 +2109,10 @@ components:
           nullable: true
 
     GroupFilterDirection:
-        type: string
-        enum:
-          - RECEIVED
-          - SENT
+      type: string
+      enum:
+        - RECEIVED
+        - SENT
 
     CreateGroup:
       type: object
@@ -2330,17 +2419,17 @@ components:
           format: int64
 
     UpdateProxyActionRequest:
-        type: object
-        properties:
-          credit_amount:
-            type: number
-            format: int64
-            example: 1000
-          end_time:
-            type: number
-            format: int64
-            nullable: true
-            example: 1719850339996
+      type: object
+      properties:
+        credit_amount:
+          type: number
+          format: int64
+          example: 1000
+        end_time:
+          type: number
+          format: int64
+          nullable: true
+          example: 1719850339996
 
     DropContextProfileContext:
       type: object
@@ -2517,7 +2606,6 @@ components:
           type: string
         type:
           $ref: "#/components/schemas/WaveMetadataType"
-
 
     CreateNewWaveVotingConfig:
       type: object
@@ -2710,7 +2798,7 @@ components:
           anyOf:
             - type: "null"
             - $ref: "#/components/schemas/IntRange"
-          example: {"min": 1719850339996, "max": 1719850339996}
+          example: { "min": 1719850339996, "max": 1719850339996 }
         authenticated_user_eligible_for_admin:
           type: boolean
 
@@ -2753,7 +2841,6 @@ components:
             - $ref: "#/components/schemas/IntRange"
           example: { "min": 1719850339996, "max": 1719850339996 }
 
-
     WaveOutcomeType:
       type: string
       enum:
@@ -2794,7 +2881,6 @@ components:
           type: array
           items:
             type: number
-
 
     WaveParticipationRequirement:
       type: string
@@ -3293,21 +3379,20 @@ components:
           type: number
           format: int64
 
-
     ChangeProfileRepRating:
-        type: object
-        required:
-            - amount
-            - category
-        properties:
-          amount:
-            type: number
-            format: int64
-          category:
-            type: string
-            maxLength: 100
-            minLength: 1
-            pattern: "^[a-zA-Z0-9?!,.'() ]{1,100}$"
+      type: object
+      required:
+        - amount
+        - category
+      properties:
+        amount:
+          type: number
+          format: int64
+        category:
+          type: string
+          maxLength: 100
+          minLength: 1
+          pattern: "^[a-zA-Z0-9?!,.'() ]{1,100}$"
 
     ChangeProfileRepRatingResponse:
       type: object
@@ -3413,14 +3498,14 @@ components:
         - DROP_CREATED
 
     WaveSubscriptionActions:
-        type: object
-        required:
-          - actions
-        properties:
-          actions:
-            type: array
-            items:
-              $ref: "#/components/schemas/WaveSubscriptionTargetAction"
+      type: object
+      required:
+        - actions
+      properties:
+        actions:
+          type: array
+          items:
+            $ref: "#/components/schemas/WaveSubscriptionTargetAction"
 
     DropSubscriptionTargetAction:
       type: string
@@ -3550,36 +3635,87 @@ components:
         - DROP_VOTED
 
     Notification:
-        type: object
-        required:
-          - id
-          - cause
-          - created_at
-          - read_at
-          - related_identity
-          - related_drops
-          - additional_context
-        properties:
-          id:
-            type: number
-            format: int64
-          cause:
-            $ref: "#/components/schemas/NotificationCause"
-          created_at:
-            type: number
-            format: int64
-          read_at:
-            type: number
-            format: int64
-            nullable: true
-          related_identity:
-            $ref: "#/components/schemas/ProfileMin"
-          related_drops:
-            type: array
-            items:
-              $ref: "#/components/schemas/Drop"
-          additional_context:
-            type: object
+      type: object
+      required:
+        - id
+        - cause
+        - created_at
+        - read_at
+        - related_identity
+        - related_drops
+        - additional_context
+      properties:
+        id:
+          type: number
+          format: int64
+        cause:
+          $ref: "#/components/schemas/NotificationCause"
+        created_at:
+          type: number
+          format: int64
+        read_at:
+          type: number
+          format: int64
+          nullable: true
+        related_identity:
+          $ref: "#/components/schemas/ProfileMin"
+        related_drops:
+          type: array
+          items:
+            $ref: "#/components/schemas/Drop"
+        additional_context:
+          type: object
+
+    IdentityAndSubscriptionActions:
+      type: object
+      required:
+        - identity
+        - actions
+      properties:
+        identity:
+          $ref: "#/components/schemas/ProfileMin"
+        actions:
+          type: array
+          items:
+            $ref: "#/components/schemas/IdentitySubscriptionTargetAction"
+
+    TargetAndSubscriptionActions:
+      type: object
+      required:
+        - target
+        - actions
+      properties:
+        target:
+          description: "Wave or drop or identity"
+          type: object
+        actions:
+          type: array
+          items:
+            $ref: "#/components/schemas/IdentitySubscriptionTargetAction"
+
+    IncomingIdentitySubscriptionsPage:
+      type: object
+      required:
+        - data
+      allOf:
+        - $ref: "#/components/schemas/PageBase"
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/IdentityAndSubscriptionActions"
+
+    OutgoingIdentitySubscriptionsPage:
+      type: object
+      required:
+        - data
+      allOf:
+        - $ref: "#/components/schemas/PageBase"
+      properties:
+        data:
+          type: array
+          items:
+            $ref: "#/components/schemas/TargetAndSubscriptionActions"
 
 security:
   - bearerAuth: []
